GTK+-3.20 A&R: fix jumping buttons in primary toolbars

--- a/usr/share/themes/Radiant-MATE/gtk-3.0/gtk-widgets.css
+++ b/usr/share/themes/Radiant-MATE/gtk-3.0/gtk-widgets.css
@@ -3051,6 +3051,7 @@ headerbar :disabled {
 }
 
 .primary-toolbar button,
+.primary-toolbar button.flat,
 headerbar button,
 .primary-toolbar button.flat:hover {
     background: transparent;
